<resources>
    <string name="app_name" translatable="false">F1Bets</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to F1Bets!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_splash_start">SplashStartActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="btnTxtLogin">Login</string>
    <string name="txtSign">Sign up</string>
    <string name="txtPasw">Password</string>
    <string name="txtEmail">Email</string>
    <string name="txtUser">Username</string>
    <string name="errLog">Login failed</string>
    <string name="errSign">Registration failed</string>
    <string name="errSignFirestore">Registration in Firestore failed</string>
    <string name="errEmail">Incorrect email</string>
    <string name="errPasw">Incorrect password</string>
    <string name="errPaswAndEmail">Incorrect email or password</string>
    <string name="errDeleteAccount">Error deleting account</string>
    <string name="succesLog">Logged</string>
    <string name="succesDeleteAccount">Deleted successfully</string>
    <string name="txtCancel">Cancel</string>
    <string name="errEmpty">Error: Empty fields</string>
    <string name="txtCloseApp">Are you sure you want to exit the application?</string>
    <string name="txtLogOut">Are you sure you want to log out?</string>
    <string name="txtNo">No</string>
    <string name="txtYes">Yes</string>
    <string name="btnCheck">I accept the terms and conditions</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="msgCheckError">You must accept the cookies</string>
    <string name="btnLogout">Log out</string>
    <string name="btnDeleteAccount">Delete account</string>
    <string name="txtContinue">Continue and log again to confirm</string>
    <string name="errImageUpload">Could not upload image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">Welcome to F1Bets</string>
    <string name="action_settings">Settings</string>
    <string name="txtDeleteAccount">Are you sure you want to delete your account?</string>
    <string name="txtMenuDrivers">Drivers</string>
    <string name="txtMenuBets">Bets</string>
    <string name="txtMenuCircuits">Circuits</string>
    <string name="txtMenuHome">Home</string>
    <string name="txtMenuProfile">Profile</string>
    <string name="txtMenuUser">User</string>
    <string name="txtMenuEnglish">English</string>
    <string name="txtMenuEspanol">Spanish</string>
    <string name="txtMenuFrancais">French</string>
    <string name="txtTitleName">Name:</string>
    <string name="txtPlaceholderNameUser">User Name</string>
    <string name="txtPlaceholderEmailUser">User Email</string>
    <string name="txtTittleEmailUser">User:</string>
    <string name="btnAddBet">New Bet</string>
    <string name="nameDriverItem">Driver name</string>
    <string name="nameTeamDriverItem">Team name</string>
    <string name="nameCircuitItem">Circuit name</string>
    <string name="txtLapsCircuit">Circuit laps</string>
    <string name="txtCircuitCountry">Circuit country</string>
    <string name="txtLaps">Laps</string>
    <string name="textConfirDeleteCont">You are going to delete it, are you sure?</string>
    <string name="txtmoneybet">Bet monney</string>
    <string name="ageAlert">F1Bets Warning</string>
    <string name="txtAgeAlert">This is a betting application, if you are not over 18 years old click exit</string>
    <string name="txtAcceptAgeAlert">I\'m over 18, proceed</string>
    <string name="txtDeclineAgeAlert">Exit, I\'m under 18</string>
    <string name="txtDeleteBet">Bet deleted</string>
    <string name="txtErrDeleteBet">Failed to delete bet</string>
    <string name="txtTitleContextMenu">Click to go to:</string>
    <string name="txtrrEmptyBetMoney">Please, add the monet to bet</string>
    <string name="txtErrDeleteDriverAssigned">Cannot delete the driver because it is assigned to a bet.</string>
    <string name="txtErrDeleteCircuitAssigned">Cannot delete the circuit because it is assigned to a bet</string>
    <string name="txtDeleteLogAccount">Delete account</string>
    <string name="txtTitleCreateBet">Create bet</string>
    <string name="txtTitleCreateCircuit">Create circuit</string>
    <string name="txtTitleCreateDriver">Create drivers</string>
    <string name="txtTitleDeleteAccount">Delete account</string>
    <string name="txtTitleUserSettings">Settings</string>
    <string name="btnTxtEdit">Save changes</string>
    <string name="txtEditCircuit">Circuit edit</string>
    <string name="txtYearBirthDriver">Year of Birth</string>
    <string name="txtMenuInfo">Information</string>
    <string name="txterrDocuNotExist">Document doesnt exist</string>
    <string name="txtDriverUpdateSuccess">Driver updated successfully</string>
    <string name="txtCircuitUpdateSuccess">Circuit updated successfully</string>
    <string name="txtErrUpdateCircuit">Error updating the circuit</string>
    <string name="txtErrUpdateDriver">Error updating driver</string>
    <string name="txtNoChange">Doesnt have any changes</string>
    <string name="txtErrGalleryPermission">Gallery permission denied</string>
    <string name="txtErrCameraPermission">Camera permission denied</string>
    <string name="txtMaterialAlertGalery">Choose from gallery</string>
    <string name="txtMaterialAlertCancel">Cancel</string>
    <string name="txtMaterialAlertTittle">Select image source</string>
    <string name="txtMaterialAlertPhoto">Take a picture</string>
    <string name="txtTitleInfoFrag">Info about the app</string>
    <string name="txtTitleImg">Image</string>
    <string name="txtLogin">Log in to enter the app</string>
    <string name="txtLengthEdit">Length (meters)</string>
    <string name="txtCountry">Country</string>
    <string name="txtLapsNumber">Number of laps</string>
    <string name="txtEditDriver">Driver edit</string>
    <string name="txtUserDataTitle">User data</string>
    <string name="txtCreateBet">Create bet</string>
    <string name="txtCreateBetMoney">Bet money:</string>
    <string name="txtDriver_name">Driver name</string>
    <string name="txtTeam">Team</string>
    <string name="txtYearOfBirth">Year of Birth</string>
    <string name="create_driver">Create driver</string>
    <string name="txtSelectCircuit">Select circuit:</string>
    <string name="txtSelecDriver">Select driver:</string>
    <string name="txtInfoInfo">Created by: Francisco Javier Sicilia Pérez\n Delivery date: 06/03/2024\n Made with: Android Studio\n Language: Kotlin\n\n For more information on how to bet on F1 races, click on the black box and press play:</string>
    <string name="txtEmailExample">something@gmail.com</string>
    <string name="txtPasswordExample">Aa123456</string>
    <string name="txtPermissionDenied">Permissions were not granted</string>
    <string name="txtCodeSelectDriver">Select a driver</string>
    <string name="txtCodeSelectCircuit">Tap to select a circuit</string>
    <string name="txtCodeSelectDriverAndCircuit">You must select a driver and a circuit</string>
    <string name="txtCodeMustSelectDriver">You must select a driver</string>
    <string name="txtCoedMustSelectCircuit">You must select a circuit</string>
    <string name="txtCircuitCreated">Circuit successfully created</string>
    <string name="txtErrorUpdateId">Error updating circuitId</string>
    <string name="txtCreateDriverSuccess">Driver successfully created</string>
    <string name="txtErrorUpdateIdDriver">Error updating driveIid</string>
    <string name="txtUserNotAuth">User not authenticated</string>
</resources>