<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgDriver"
        android:layout_width="68dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <EditText
        android:id="@+id/txtNameDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtDriver_name"
        android:maxLength="26"/>

    <EditText
        android:id="@+id/txtTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtTeam"
        android:maxLength="19"/>

    <EditText
        android:id="@+id/txtYearBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/txtYearOfBirth"
        android:maxLength="4"/>


    <Button
        android:id="@+id/btnCreateDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_driver"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtCancel"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/imageViewlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

</LinearLayout>