<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ui.circuit.EditCircuitFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgCircuit"
        android:layout_width="68dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/txtNameCircuit"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginTop="176dp"
        android:hint="@string/nameCircuitItem"
        android:maxLength="26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCountry"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:hint="@string/txtCountry"
        android:maxLength="29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameCircuit" />

    <EditText
        android:id="@+id/txtLaps"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:hint="@string/txtLapsNumber"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCountry" />

    <EditText
        android:id="@+id/txtLength"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:hint="@string/txtLengthEdit"
        android:inputType="numberDecimal"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLaps" />

    <Button
        android:id="@+id/btnSaveEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnTxtEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLength" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toEndOf="@+id/btnSaveEdit"
        app:layout_constraintTop_toBottomOf="@+id/txtLength" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="60dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>